# esp32_matter_led_controller

./: .gitignore  AGENTS.md  README.md  activate.sh  bootstrap.sh
.github/workflows/: build.yml  lint.yml  tests.yml
app/: CMakeLists.txt  Kconfig  prj.conf  prov.conf  rgb.conf  sysbuild.conf
app/boards/: btf_wled_esp32_esp32_procpu.conf  btf_wled_esp32c6_esp32c6_hpcore.conf
app/data_model/: lighting.matter  lighting.zap  rgb_light.matter  rgb_light.zap
app/include/: AppEvent.h  AppTask.h  CHIPProjectConfig.h  DeviceCallbacks.h  LightingManager.h
app/src/: AppTask.cpp  DeviceCallbacks.cpp  LightingManager.cpp  ProvisionShell.cpp  color_math.c  color_math.h  led_pwm.c  led_pwm.h  main.c  rand_shim.c
app/src/scaffold/: AppTaskBase.cpp  CommonDeviceCallbacks.cpp
app/sysbuild/: mcuboot.conf
boards/btf/btf_wled_esp32/: Kconfig  Kconfig.btf_wled_esp32  board.yml  btf_wled_esp32-pinctrl.dtsi  btf_wled_esp32_procpu.dts  btf_wled_esp32_procpu.yaml
boards/btf/btf_wled_esp32c6/: Kconfig  Kconfig.btf_wled_esp32c6  board.yml  btf_wled_esp32c6-pinctrl.dtsi  btf_wled_esp32c6_hpcore.dts  btf_wled_esp32c6_hpcore.yaml
chip-patches/: 0001-platform-zephyr-wifimanager-include-cassert.patch  0002-sysheapmalloc-noinit-heap-buffer.patch  0003-apptaskbase-netcomm-init-after-initserver.patch  0003-nxp-kconfig-defaults-drop-legacy-mbedtls-symbols.patch  0004-platform-zephyr-no-entropy-source-under-psa.patch  0005-sysheapmalloc-multi-heap-reclaim.patch  0006-zephyr-ble-shutdown-disable-service-mode.patch  README.md
docs/: esp32c6-rework-notes.md  zephyr-4.4-upgrade-notes.md
dts/btf/: partitions_btf_4M.dtsi  partitions_btf_8M.dtsi
hal-patches/: 0001-recursion-safe-esp-os-critical-section.patch  README.md
manifest/: west.yml
manifest/zephyr/: module.yml
mcuboot-patches/: 0001-ecdsa-psa-crypto-init.patch
scripts/: provision.py
tests/color_math/: CMakeLists.txt  testcase.yaml
tests/color_math/src/: main.c
twister-out/: testplan.json  twister.json  twister.xml  twister_report.xml  twister_suite_report.xml
twister-out.1/: testplan.json  twister.json  twister.xml  twister_report.xml  twister_suite_report.xml
twister-out.1/native_sim_native/host/tests/color_math/app.color_math/: .ninja_log  CMakeCache.txt  build.ninja  build_info.yml  cmake_install.cmake  compile_commands.json  run_id.txt  zephyr_modules.txt  zephyr_settings.txt
twister-out.1/native_sim_native/host/tests/color_math/app.color_math/Kconfig/: Kconfig.shield.defconfig
twister-out.1/native_sim_native/host/tests/color_math/app.color_math/Kconfig/arch/: Kconfig
twister-out.1/native_sim_native/host/tests/color_math/app.color_math/Kconfig/boards/: Kconfig  Kconfig.defconfig  Kconfig.sysbuild
twister-out.1/native_sim_native/host/tests/color_math/app.color_math/Kconfig/soc/: Kconfig  Kconfig.defconfig  Kconfig.soc  Kconfig.sysbuild
twister-out.1/native_sim_native/host/tests/color_math/app.color_math/modules/hal_espressif/: cmake_install.cmake
twister-out.1/native_sim_native/host/tests/color_math/app.color_math/modules/picolibc/: cmake_install.cmake
twister-out.1/native_sim_native/host/tests/color_math/app.color_math/zephyr/: .config-trace.pickle  edt.pickle  snippets_generated.cmake  zephyr.dts.d
twister-out.1/native_sim_native/host/tests/color_math/app.color_math/zephyr/NSI/: nsi_config
twister-out.2/: testplan.json  twister.json  twister.xml  twister_report.xml  twister_suite_report.xml
twister-out.2/native_sim_native/host/tests/color_math/app.color_math/: .ninja_log  CMakeCache.txt  build.ninja  compile_commands.json  run_id.txt
twister-out.2/native_sim_native/host/tests/color_math/app.color_math/Kconfig/: kconfig_module_dirs.env
twister-out.2/native_sim_native/host/tests/color_math/app.color_math/zephyr/: .cmake.dotconfig.checksum  .config  .config-trace.json  cmake_install.cmake  edt.pickle  runners.yaml  syscall_weakdefs_llext.c  zephyr.dts.pre
twister-out/native_sim_native_64/host/tests/color_math/app.color_math/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  build_info.yml  cmake_install.cmake  compile_commands.json  run_id.txt  sysbuild_modules.txt
twister-out/native_sim_native_64/host/tests/color_math/app.color_math/Kconfig/: Kconfig.modules  Kconfig.shield  Kconfig.sysbuild.modules  kconfig_module_dirs.cmake
twister-out/native_sim_native_64/host/tests/color_math/app.color_math/zephyr/: .config  .config-trace.json  .config-trace.pickle  cmake_install.cmake  edt.pickle  linker_zephyr_pre0.cmd  linker_zephyr_pre0.cmd.dep  zephyr.dts.d  zephyr.dts.pre  zephyr.elf  zephyr.stat  zephyr_pre0.map
(+159 files in other folders)
